# slavoj

./: .gitignore  Makefile  README.md  config.dev.yaml  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
scripts/: setup_author.py  setup_books.py  setup_mongodb.py
scripts/setup_data/author/: slavoj-zizek.json
scripts/setup_data/book/: slavoj-zizek.json
src/core/: config.py  exceptions.py
src/domain/: value_objects.py
src/slavoj/: main.py
src/slavoj/core/: config.py  exceptions.py  logging.py
src/slavoj/domain/: interfaces.py  models.py  value_objects.py
src/slavoj/infrastructure/database/: mongodb.py
src/slavoj/infrastructure/llm/: factory.py  gemini.py
src/slavoj/infrastructure/messaging/: twilio.py
src/slavoj/services/: book_processor.py  conversation.py  messaging.py
src/slavoj/utils/: mongodb.py  pdf.py
