[tool.poetry]
name = "slavoj"
version = "0.1.0"
description = "A system for conversing with authors through their works"
authors = ["Lee Johnson <leejavaa@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
motor = "^3.3.1"
google-generativeai = "^0.3.0"
twilio = "^8.10.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"